--- a/app/src/styles/reset.css
+++ b/app/src/styles/reset.css
@@ -24,7 +24,9 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
+	font-family: 'Open Sans', sans-serif;
+	background: #E5E5E5;
 }
 ol, ul {
 	list-style: none;
